--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta HTTP-EQUIV="REFRESH" CONTENT="1; URL=http://mytruelovee.tk/4.html">
+<meta HTTP-EQUIV="REFRESH" CONTENT="1; URL=https://lovellyhappen.github.io/bst.html">
